# mim-projekty

./: .gitignore  README.md  zadanie4.nb
Bazy danych/: README.md
C++ language course/zadanie1/: top7.cc
C++ language course/zadanie6/: board.h  worldcup2022.h
Compiler construction/instant/: Makefile  README.md  package.yaml  stack.yaml
Compiler construction/latte/: Makefile  README.md  bnfc.cf  compile_bnfc.sh  package.yaml  run_tests.sh  stack.yaml
Computer networks/: CMakeLists.txt  Makefile  README.md
Computer networks/src/: AtomicQueues.h  DatagramConverter.h  Discover.h  Err.h  Options.h  Protocols.h  Receiver.cpp  ReceiverStream.h  Sender.cpp  SenderController.h  Stations.h  TcpServer.h  Telnet.h  UdpServer.h
Computer networks/tests/: sender_args_tests.py  sender_ctrl_tests.py  sender_tests.py  utils.py
Concurrent programming/cpp/: my_tests.hpp  system.hpp
Concurrent programming/unix/: README.md  err.h
Deep Neural Networks/: HW_1_revnet.ipynb  HW_2_visual_anomaly_detection.ipynb  HW_3_transformer.ipynb  HW_4_bbf.ipynb  readme.md
Individual programming project/Duże zadanie/: MainPage.dox
Individual programming project/Małe zadanie/: Makefile  README.md  array.h  bitvectors.c  test.sh  types.h
Indywidualny projekt programistyczny/Małe zadanie/: array.c  bitvectors.h  errors.h  queue.c  queue.h  test_no_verbose.sh
Introduction to functional programming/: README.md
Introduction to functional programming/exams/: treeFromList.ml
Introduction to functional programming/iSet/: iSet.mli
Inżynieria Oprogramowania/: README.md
Języki i narzędzia programowania I/: README.md
Języki i narzędzia programowania I (C++)/zadanie3/: moneybag.cc
Języki i narzędzia programowania I/zadanie1/: top7_tresc.txt
Języki i narzędzia programowania I/zadanie5/: kvfifo.h
Języki i narzędzia programowania I/zadanie6/: dice.h  player.h  square.h  square_visitor.h  worldcup.h
Języki i narzędzia programowania I/zadanie7/: functional.h  images.h
Microservices/: LICENSE  README.md
Microservices/email/: deployment.yaml
Microservices/networking/: ingress.yaml
Microservices/redis/: config.yaml  deployment.yaml
Microservices/website/: Tiltfile  deployment.yaml  service.yaml
Object-oriented programming/bajtTrade/: info.md
Operating systems/: README.md
Operating systems/testy/: inverse_permutation_tests.c
Operating systems/zadania/: transfer_money.patch
Probability theory and statistics/: task1.ipynb  task2.ipynb  task3.ipynb  task4.ipynb
Programming languages and paradigms/Emilia Programming Language/: Makefile  README.md  emilia-lang.cabal  grammar.cf  langauge_description.md  package.yaml  run_examples.sh
Programming languages and paradigms/Haskell/: Graph.hs  Set.hs  readme.md
Programming languages and paradigms/Prolog/: peterson-bad0.txt  readme.md  unsafe.txt  wr438709.pl  wr438709_no_difference_lists.pl
Programowanie obiektowe/bajtTrade/: settings.gradle  uruchom.sh
Programowanie współbieżne/: .gitignore  README.md
Programowanie współbieżne/cpp/: CMakeLists.txt  demo.cpp  my_tests.cpp
Programowanie współbieżne/java/: README.md
Programowanie współbieżne/unix/: CMakeLists.txt  err.c  utils.c  utils.h
Security of computer systems/: readme.md
Security of computer systems/task1-web/: report.md
Security of computer systems/task2-reverse-engineering/: find_hash.py  raport.md
Security of computer systems/task3-binary-exploitation/: solve.py
Security of computer systems/task4-cryptography/: raport.md  secrets.py  server.py  solve_cbc.py  solve_ncg.py  utils.py
Systemy Operacyjne/zadania/: core.asm  exclusive.patch  inverse_permutation.asm  max_before_deadline.patch
Wstęp do programowania (funkcyjny)/: README.md
Wstęp do programowania (funkcyjny)/arytmetyka/: arytmetyka.ml
Wstęp do programowania (funkcyjny)/iSet/: iSet.ml
Wstęp do programowania (funkcyjny)/origami/: origami.mli
Wstęp do programowania (funkcyjny)/topol/: topol.ml
bd/projekt/: diagramWR.xml  model_logiczny_wr.sql
iSet/: iSet.ml
ipp/duze/: CMakeLists.txt  Doxyfile.in
ipp/duze/src/: forward_trie.h  phone_forward.c  phone_forward.h  phone_numbers.c  reverse_trie.c  trie_common.h  utils.h
ipp/male/: CMakeLists.txt  bfs.c  bfs.h  errors.c  input.c  input.h  main.c  rectest.py
jnp-microservices/: .gitignore  README.md  common-config.yaml
jnp-microservices/email/: Dockerfile  Tiltfile  deployment.yaml
jnp-microservices/newsletter/: Tiltfile  deployment.yaml
jnp-microservices/newsletters/: Tiltfile  deployment.yaml  service.yaml
jnp-microservices/postgres/: config.yaml  deployment.yaml  service-dev.yaml
jnp-microservices/redis/: deployment.yaml  redisinsight.yaml  service.yaml
jnp-microservices/users/: Tiltfile  deployment.yaml  service.yaml
jnp-microservices/website/: .env.development  next.config.js  package-lock.json  package.json  tailwind.config.js
jnp/zadanie1/: top7.cc
jnp/zadanie2/: hash.cc  hash.h  hash_tresc.txt
jnp/zadanie3/: moneybag.h  moneybag_tresc.txt
jnp/zadanie4/: organism.h  organizmy_tresc.txt
kolejka-priorytetowa/: leftist.ml
leftist/: leftist.ml
origami/: origami.ml
po/bajtTrade/: build.gradle  opis_testu.txt
po/oop-matrices/: README.md  build.gradle.kts  settings.gradle.kts
przelewanka/: przelewankawr.ml
pw/: .gitignore
pw/c/deskryptory/: CMakeLists.txt  child-fifo.c  child-pipe.c  err.h  exec.c  parent-dup.c  parent-fifo.c  parent-pipe.c  pipeline-tester.c  pipeline.c
pw/cp2022/: scenario.txt
pw/egzekutor/: CMakeLists.txt  example_task.c  executor.c  pipeline-utils.c  pipeline-utils.h  task1.c  utils.c  utils.h
pw/egzekutor/tasks/: task1
pw/executor_tests/: test.py  test2.py  test_one.py  test_process.py
pw/posix/: .gitignore  CMakeLists.txt  executor.c  pipeline-utils.c  simple_executor.c  test.py  utils.c
pw/pw_cpp/: CMakeLists.txt  demo.cpp  my_tests.cpp  my_tests.h  system.cpp  system.hpp
pw/unix/: CMakeLists.txt  README.md  executor.c  utils.c  utils.h
pw/unix_tests/: .gitignore  sock_client.py  sock_serv.py
topol/: a.out  pMap.cmi  pMap.cmo  topol.cmo  topol.ml
(+420 files in other folders)
